eclipse-workspace/eclipse-workspace/ExprEvalListener/bin/Expr.g4
grammar Expr;

expr
    : expr op=('+'|'-') term     # AddSubExpr
    | term                       # ToTerm
    ;

term
    : term '*' factor            # MulExpr
    | factor                     # ToFactor
    ;

factor
    : '-' factor                 # UnaryMinusExpr
    | '(' expr ')'               # ParenExpr
    | NUMBER                     # NumberExpr
    | ID						 # IdExpr
    ;

ID : [a-zA-Z]+;
NUMBER : [0-9]+ ('.' [0-9]+)? ;
WS     : [ \t\r\n]+ -> skip ;
